# Database-CRUD-Operations-Console

./: CLI_app.py  README.md  config.ini  main.py  my_select.py  pyproject.toml  seed.py
filling_bd/: CLI_app.py  CRUD.py  seed.py
migrations/: env.py
migrations/versions/: 080f40092fee_init.py  b9c346640aa3_init.py  ef9b1fcc0aca_init.py  efef2cb7c732_init.py
operation_on_bd/: CRUD.py  seed.py  signup.py
src/: connection.py  models.py
